k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: url-shortener
spec:
  replicas: 3
  selector:
    matchLabels:
      app: url-shortener
  template:
    metadata:
      labels:
        app: url-shortener
    spec:
      containers:
        - name: web
          image: url-shortener:v1
          imagePullPolicy: Never       # используем локальный образ (Docker Desktop)
          ports:
            - containerPort: 8080

          # ── Переменные окружения из ConfigMap и Secret ──────────
          volumeMounts:
            - name: data-volume
              mountPath: /data          # папка внутри контейнера

          # ── Пробы здоровья ───────────────────────────────────────
          readinessProbe:
            httpGet:
              path: /api/health
              port: 8080
            initialDelaySeconds: 3     # подождать 5с после старта
            periodSeconds: 5  
            failureThreshold: 2
            successThreshold: 1        # проверять каждые 10с
          livenessProbe:
            httpGet:
              path: /api/health
              port: 8080
            initialDelaySeconds: 15
            periodSeconds: 20

          # ── Ресурсы ──────────────────────────────────────────────
          resources:
            requests:
              cpu: "100m"              # 0.1 ядра CPU минимум
              memory: "64Mi"           # 64 МБ памяти минимум
            limits:
              cpu: "250m"              # не более 0.25 ядра
              memory: "128Mi"          # не более 128 МБ

      # ── Том подключается к PVC ───────────────────────────────────
      volumes:
        - name: data-volume
          persistentVolumeClaim:
            claimName: shortener-pvc
